# pptx-to-html5

./: .gitignore  =10.2.0  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/copilot/: instructions.md
.github/workflows/: ci.yml  pypi.yml  release.yml
src/pptx_to_html5/: __init__.py  cli.py  converter.py
src/pptx_to_html5/templates/: presentation.html  script.js  styles.css
src/pptx_tools/: __init__.py  cli.py  converter.py
src/pptx_tools/templates/: presentation.html  script.js  styles.css
tests/: test_cli.py  test_converter.py
